--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- header -->
+    <header>
+      <img
+        src="./assets/images/codingnepal-navbar-logo-190x48-blue-transparent.png"
+        alt="logo" />
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+            <a href="#"> Service</a>
+            <a href="#">Product</a>
+            <a href="#">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- section  -->
+    <section></section>
+
+    <!-- footer -->
+    <footer></footer>
+  </body>
 </html>
